<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CE1ECBE9"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationText"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="86dp" />

    <TextView
        android:id="@+id/daysInFutureText"
        android:layout_width="84dp"
        android:layout_height="91dp"
        android:text="@string/daysInFutureText"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="128dp" />

    <EditText
        android:id="@+id/locationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/locationName"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="72dp" />

    <EditText
        android:id="@+id/amountOfDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/amountOfDays"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="150dp" />

    <Button
        android:id="@+id/getForecastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getForecastButton"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="219dp" />

    <Button
        android:id="@+id/currentLocationForecastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentLocationForecastButton"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="287dp" />

    <TextView
        android:id="@+id/getForecastText"
        android:layout_width="344dp"
        android:layout_height="20dp"
        android:text="@string/getForecastText"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="267dp" />
</androidx.constraintlayout.widget.ConstraintLayout>